--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <a href="#" class="neon-button">Neon</a>
+    <a href="2022.html" class="neon-button">2022</a>
 </body>
