--- a/2022.html
+++ b/2022.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link href="2022.css" rel="stylesheets">
+  <link href="2022.css" rel="stylesheet">
 </head>
 <body>
   <h1 class="header1">2022 bepo</h1>
