--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="style.css" rel="stylesheet">
+  <title>home</title>
 </head>
 <body>
     <a href="2022.html" class="neon-button">2022</a>
