change web page title

--- a/2022.html
+++ b/2022.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <head>
   <link href="2022.css" rel="stylesheet">
+  <title>2022</title>
 </head>
 <body>
-  <h1 class="header1">Archives for 2022 :3</h1>
+  <h1 class="header1">Funny pictures :swag:</h1>
   <h2>
       <a href="image_archive/11062022.png">• ugly || 11/06/2022</a>
   </h2>
