--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
   <title>home</title>
 </head>
 <body>
-    <a href="2022.html" class="neon-button">2022</a>
+    <a href="2022.html" class="neon-button">dont press</a>
 </body>
