--- a/2022.html
+++ b/2022.html
@@ -15,7 +15,7 @@
     <a href="image_archive/11062022_3.png">• meehee rabbid || 11/06/2022 (3)</a>
   </h2>
   <h2>
-      <a href="image_archive/12062022.png">• cute capoo || 11/06/2022 (4)</a>
+      <a href="image_archive/11062022_4.png">• cute capoo || 11/06/2022 (4)</a>
   </h2>
   
 <body>
