--- a/2022.html
+++ b/2022.html
@@ -5,17 +5,17 @@
 </head>
 <body>
   <h1 class="header1">Funny pictures :swag:</h1>
+  <h3>
+    <a href="index.html">back</a>
+  </h3> 
   <h2>
       <a href="image_archive/11062022.png">• yuna || 11/06/2022 (1)</a>
   </h2>
   <h2>
-      <a href="image_archive/11062022_2.png">• sexy frank chen || 11/06/2022 (2)</a>
+    <a href="image_archive/11062022_3.png">• meehee rabbid || 11/06/2022 (2)</a>
   </h2>
   <h2>
-    <a href="image_archive/11062022_3.png">• meehee rabbid || 11/06/2022 (3)</a>
-  </h2>
-  <h2>
-      <a href="image_archive/11062022_4.png">• cute capoo || 11/06/2022 (4)</a>
+      <a href="image_archive/11062022_4.png">• cute capoo || 11/06/2022 (3)</a>
   </h2>
   
 <body>
