--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <title>home</title>
 </head>
 <body>
-    <a href="2022.html" class="neon-button">dont press</a>
+    <a href="2022.html" class="neon-button">pictures</a>
+    <a href="frank.html" class="neon-button">Frank Chen</a>
 </body>
